// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar should match snapshot with user 1`] = `
<Menu
  secondary={true}
>
  <MenuItem>
    <LinkRoutes
      route="/"
    >
      <a>
        <Image
          as="img"
          height="36px"
          src="/static/images/Logo_Nav.png"
          ui={true}
        />
      </a>
    </LinkRoutes>
  </MenuItem>
  <MenuMenu
    position="right"
  >
    <CreateMenu
      user={
        Object {
          "_json": Object {
            "avatar_url": "https://avatars2.githubusercontent.com/u/156229?v=4",
          },
          "displayName": "Fred",
          "id": undefined,
          "subscriptionPlan": undefined,
          "username": "fred",
        }
      }
    />
    <mockConstructor
      user={
        Object {
          "_json": Object {
            "avatar_url": "https://avatars2.githubusercontent.com/u/156229?v=4",
          },
          "displayName": "Fred",
          "id": undefined,
          "subscriptionPlan": undefined,
          "username": "fred",
        }
      }
    />
  </MenuMenu>
</Menu>
`;

exports[`navbar should match snapshot without user 1`] = `
<Menu
  secondary={true}
>
  <MenuItem>
    <LinkRoutes
      route="/"
    >
      <a>
        <Image
          as="img"
          height="36px"
          src="/static/images/Logo_Nav.png"
          ui={true}
        />
      </a>
    </LinkRoutes>
  </MenuItem>
  <MenuMenu
    position="right"
  >
    <CreateMenu />
    <mockConstructor />
  </MenuMenu>
</Menu>
`;
